# generate_password

./: README.md  db.sqlite3  pyproject.toml
PasswordGenerator/: settings.py  urls.py
generator/: views.py
generator/templates/generator/: home.html  password.html
